--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,10 @@ body {
     margin: 0;
     font-family: 'Baloo 2', cursive;
     background-image: url('images/cats-cat-funny-selfie-wallpaper-preview.jpg');
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: 150px 100px;
+    background-position: center;
+    background-attachment: fixed;
     overflow-x: hidden;
 }
 
